css/mobile.css
@media screen and (max-width:768px) 
{
    
/*Ajout de la fonctionnalité box-sizing*/
* 
{
    box-sizing: border-box;
   /* box-sizing est appliqué à tous les éléments */
}

/*ajout de la police Raleway*/
body
{
    font-family:'Raleway';
    color: rgb(4, 4, 5);
    margin-left: 5px;
}
/*LES TITRES --------------------------------------------------------------------------------------------------------------------------------------*/
h1
{
    font-size: 140%;
    font-weight: 600;
    margin: 10px;
    margin-top: 30px;
    padding-left: 10px;
}
h2
{
    font-size: 120%;
    margin: 10px;
    font-weight: 900;
    padding-left: 10px;
    }
h3
{
    font-size: 110%;
    font-weight: 100;
    margin: 10px;
    padding-left: 10px;
}
h4
{
    font-size: 90%;
    font-weight: 300;
}
a:link 
{ 
 text-decoration:none; 
 color: initial;
} 
a:visited
{ 
 text-decoration:none; 
 color: inherit;
} 

/* HEADER + MENU --------------------------------------------------------------------------------------------------------------------------------------*/
.logo
{
    width: 100%;
    display: flex;
    justify-content: center;
    height: 80px;
    margin-top: 20px;
    position: relative;
    left: 6%;
}
header
{
    width: 100%;
}
.menu
{
    display: flex;
    flex-direction: row;
    list-style: none; /*suppression des points*/
    font-size: 120%;
    margin-left: -40px;
}

li /*espacement entre les élements de menu*/
{
    border-bottom: 3px solid #F2F2F2;
    display: flex;
    justify-content: center;
    flex-grow: 1;
    width: 50%;
    height: 80px;
    align-items: center;

}

.elemtmenu:hover
{
    color:#0065FC;
    border-bottom: 3px solid #0065FC;
}
.intro
{
    margin-top: 0px;
    margin-left: 20px;
    margin-bottom: 10px;
    position: relative;
    left: -10px;
}
/* LA RECHERCHE --------------------------------------------------------------------------------------------------------------------------------------*/
::placeholder {
    color: rgb(37, 37, 37);
    font-weight: 500;
  }
.recherche
{
    display: flex;
    flex-direction: row;
    margin: 2%;
    justify-content: center;
    width: 100%;
}
.localisation
{ 
    background-color: #F2F2F2;
    padding: 5%;
    border-top-left-radius: 30%;
    border-bottom-left-radius: 30%;
    width: 12%;
    aspect-ratio: 1/1;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 120%;
}
.find
{ 
    border-top: 2px solid #F2F2F2;
    border-bottom: 2px solid #F2F2F2;
    padding-left: 2%;
    width: 70%;
    display: flex;
    justify-content: start;
    align-items: center;
}
#site-search
{
    border: none;
    font-size: 100%;
    font-weight: 900;
}
.valid
{ 
    background-color: #0065FC;
    color: white;
    padding: 2%;
    margin-left: -4%;
    border-radius: 30%;
    width: 12%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 120%;
}
.blocrecherche
{
    display: flex;
    justify-content: center;
    width: 100%;
}
.validtext{
    display: none;
}


/* LES FILTRES --------------------------------------------------------------------------------------------------------------------------------------*/
.filtre
{
    width: 100%;
    font-size: 120%;
    padding-bottom: 10px;
}
.filtres
{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    font-size: 16px;
    margin-left: 30px;
}
.filtre1
{
    display: flex;
}
.filtreplus
{
    display: flex;
    align-items: center;
}
.icon
{
padding: 21px;
background-color: #DEEBFF;
border-radius: 50px;
width: 50px;
height: 50px;
z-index: 1;
color:#0065FC ;
font-size: 20px;
display: flex;
justify-content: center;
align-items: center;
}
.icon1
{
padding: 21px;
background-color: #DEEBFF;
border-radius: 50px;
width: 50px;
height: 50px;
z-index: 1;
color:#0065FC ;
font-size: 20px;
display: flex;
justify-content: center;
align-items: center;
position: relative;
top: -5px;
}
.textfiltre
{
    padding: 10px;
    border-top: 3px solid #F2F2F2 ;
    border-bottom: 3px solid #F2F2F2 ;
    border-right: 3px solid #F2F2F2 ;
    width: 130px;
    height: 50px;
    border-top-right-radius: 50px;
    border-bottom-right-radius: 50px;
    position: relative;
    left: -20px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding-left: 25px;
    margin-bottom: 10px;
    font-size: 17px;
    
}
.textfiltre:hover
{background-color: #F2F2F2;}
.textfiltre2:hover
{background-color: #F2F2F2;}
.textfiltre3:hover
{background-color: #F2F2F2;}

.textfiltre2
{
    padding: 10px;
    border-top: 3px solid #F2F2F2 ;
    border-bottom: 3px solid #F2F2F2 ;
    border-right: 3px solid #F2F2F2 ;
    width: 170px;
    height: 50px;
    border-top-right-radius: 50px;
    border-bottom-right-radius: 50px;
    position: relative;
    left: -17px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding-left: 15px;
    padding-left: 20px;
    font-size: 17px;
    
}
.textfiltre3
{
    padding: 10px;
    border-top: 3px solid #F2F2F2 ;
    border-bottom: 3px solid #F2F2F2 ;
    border-right: 3px solid #F2F2F2 ;
    width: 90px;
    height: 50px;
    border-top-right-radius: 50px;
    border-bottom-right-radius: 50px;
    position: relative;
    left: -17px;
    top:-5px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding-left: 15px;
    padding-left: 20px;
    font-size: 17px;
    
}
.iconinfo
{
    color: #0065FC;
    border: 2px solid #F2F2F2;
    border-radius: 50px;
    width: 50px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    margin-left: 20px;
}
.plus 
{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

/* Bloc hebergements --------------------------------------------------------------------------------------------------------------------------------------*/
.blocheberg
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
}
.carteheberg
{
    width: 90%;
    border-radius: 20px;
    box-shadow: 3px 3px 4px 4px #d6d4d4;
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: white;
    margin: 20px;

}
.carteheberg:hover
{
    -ms-transform: scale(1.05); /* IE 9 */
    -webkit-transform: scale(1.05); /* Safari 3-8 */
    transform: scale(1.05);
}
.imagecarte
{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    padding: 8px;
    width: 100%;
    aspect-ratio: 20/7;
    object-fit: cover;
       
}
.descriptioncarte
{
    display: flex;
    flex-direction: column;
    align-items:flex-start;
    justify-content: flex-start;
    padding-left: 10px;
    padding-bottom: 5px;
    

}
.titrecarte
{
    font-size: 120%;
    font-weight: 7s00;
    padding-bottom: 5px;
}
.desccarte
{
    font-size: 90%;
    font-weight: 100;
    padding-bottom: 5px;
}

.starpleine
{
    color: #0065FC;
}
.starvide
{
    color: #d6d4d4;
}
.notation
{ 
    display: flex;
    font-size: 15px;
}

.cartes
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
}


/* Bloc populaire -------------------------------------------------------------------------------------------------------------------------------------- */
.blocpopulaire
{
    display: flex;
    flex-direction: column;
    width: 100%;
    background-color: #F2F2F2 ;
}
.titreclasspop
{ 
    display: flex;
    justify-content: space-between;
}
.cartepop
{
    width: 90%;
    border-radius: 20px;
    box-shadow: 3px 3px 4px 4px #d6d4d4;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    margin: 5%;
}
.cartepop:hover
{
    -ms-transform: scale(1.05); /* IE 9 */
    -webkit-transform: scale(1.05); /* Safari 3-8 */
    transform: scale(1.05);
}
.imagecartepop
{
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    padding: 8px;
    display: flex;
    justify-content: center;
    object-fit: cover;
    width: 100%;
    aspect-ratio: 1/1;
    
} 
.imgcartepop 
{
    width: 40%;
}
.descriptioncartepop
{
    display: flex;
    flex-direction: column;
    align-items:flex-start;
    justify-content: flex-start;
    padding-left: 3%;
    padding-bottom: 3%;
    padding-right: 5%;
    width: 60%;
}
.titrecartepop
{
    padding-bottom: 3%;
    padding-top: 5%;
    font-size: 110%;
    font-weight: 700;
    width: 100%;
}
.desccartepop
{
    font-size: 100%;
    font-weight: 100;
    padding-bottom: 25px;
    padding-top: 6px;
}
.notationpop
{ 
    display: flex;
    padding-top: 1%;
    font-size: 15px;
}

/* Hebergements --------------------------------------------------------------------------------------------------------------------------------------*/
#hebergements
{
    display: flex;
    flex-direction: column-reverse;
    justify-content: space-around;
}
/* Bloc activités --------------------------------------------------------------------------------------------------------------------------------------*/
.cartesactiv
{ 
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
}
.titreblocactivite
{
    margin: 10px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}
.carteactivite1
{
    width: 90%;
    border-radius: 20px;
    box-shadow: 3px 3px 4px 4px #d6d4d4;
    display: flex;
    flex-direction: column;
    background-color: white;
    margin: 10px;
}
.carteactivite2
{
    width: 90%;
    border-radius: 20px;
    box-shadow: 3px 3px 4px 4px #d6d4d4;
    display: flex;
    flex-direction: column;
    background-color: white;
    margin: 10px;
}
.carteactivite3
{
    width: 90%;
    border-radius: 20px;
    box-shadow: 3px 3px 4px 4px #d6d4d4;
    display: flex;
    flex-direction: column;
    background-color: white;
    margin: 10px;
}
.carteactivite4
{
    width: 90%;
    border-radius: 20px;
    box-shadow: 3px 3px 4px 4px #d6d4d4;
    display: flex;
    flex-direction: column;
    background-color: white;
    margin: 10px;
}
.carteactivite1:hover
{
    -ms-transform: scale(1.05); /* IE 9 */
    -webkit-transform: scale(1.05); /* Safari 3-8 */
    transform: scale(1.05);
}
.carteactivite2:hover
{
    -ms-transform: scale(1.1); /* IE 9 */
    -webkit-transform: scale(1.1); /* Safari 3-8 */
    transform: scale(1.1);
}
.carteactivite3:hover
{
    -ms-transform: scale(1.05); /* IE 9 */
    -webkit-transform: scale(1.05); /* Safari 3-8 */
    transform: scale(1.05);
}
.carteactivite4:hover
{
    -ms-transform: scale(1.05); /* IE 9 */
    -webkit-transform: scale(1.05); /* Safari 3-8 */
    transform: scale(1.05);
}
.imagecarteactiv1
{
    height: 130px;
}
.imagecarteactiv2
{
    height: 130px;
}
.imagecarteactiv3
{
    height: 130px;
}
.imagecarteactiv4
{
    height: 130px;
}
.imagecarteactiv1 img
{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover;
    width: 100%;
    height: 100%;
}

.imagecarteactiv2 img
{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover;
    width: 100%;
    height: 100%;
}
.imagecarteactiv3 img
{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover;
    width: 100%;
    height: 100%;
}
.imagecarteactiv4 img
{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    object-fit: cover;
    width: 100%;
    height: 100%;
}
.titrecarteact
{
    font-size: 110%;
    font-weight: 700;
    padding: 15px;
}

/* FOOTER --------------------------------------------------------------------------------------------------------------------------------------*/

footer
{
    background-color: #F2F2F2;
    padding: 2%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    margin-top: 10px;
}
.blocfooter
{
    margin-bottom: 5px;
    margin-top: 5px;
}
}

